--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postcss": "^7.0.8",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^9.9.0",
+    "stylelint-order": "^2.0.0",
     "webpack": "^4.28.1",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
